--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "Trackr-Backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app.js",
+    "build": "pnpm i"
   },
+  "type": "module",
   "keywords": [],
-  "author": "",
+  "author": "Pujan Khunt",
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
