--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
     "cors": "^2.8.5",
@@ -23,5 +24,9 @@
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "zod": "^3.25.28"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2"
   }
 }
